--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div id="map"></div>
 
     <!-- Property Listing Form -->
-    <form id="property-form" style="display: none;">
+    <form id="property-form">
         <h2>ลงประกาศทรัพย์สิน</h2>
         <label for="title">
             <i class="fas fa-heading"></i> ชื่อทรัพย์สิน:
