--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
         <div class="profile-section">
             <img src="profile-icon.png" alt="Profile" class="profile-icon">
-            <span class="username">PropertyPin</span>
+            <span class="username">Real Estate Platform</span>
             <span class="rating">5.00</span>
         </div>
     </header>
@@ -38,7 +38,7 @@
     <div id="map"></div>
 
     <!-- Property Listing Form -->
-    <form id="property-form">
+    <form id="property-form" style="display: none;">
         <h2>ลงประกาศทรัพย์สิน</h2>
         <label for="title">
             <i class="fas fa-heading"></i> ชื่อทรัพย์สิน:
