--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
         </label>
         <input type="number" step="any" id="lng" name="lng" placeholder="ใส่ลองจิจูด">
 
+        <label for="image">
+            <i class="fas fa-image"></i> ภาพถ่าย:
+        </label>
+        <input type="file" id="image" name="image" accept="image/*">
+
         <button type="submit">
             <i class="fas fa-plus"></i> เพิ่มทรัพย์สิน
         </button>
