--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
         <div class="profile-section">
             <img src="profile-icon.png" alt="Profile" class="profile-icon">
-            <span class="username">Real Estate Platform</span>
+            <span class="username">PropertyPinซื้อขายปักหมุด</span>
             <span class="rating">5.00</span>
         </div>
     </header>
