--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <!-- Header -->
     <header class="header">
         <div class="profile-section">
-            <img src="logo.png" alt="Logo" class="logo">
+            <!-- Replace logo with text -->
+            <span class="logo-text">PropertyPin</span>
             <span class="username">Real Estate Platform</span>
             <span class="rating">5.00</span>
         </div>
