--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="PropertyPin - แพลตฟอร์มซื้อขายอสังหาริมทรัพย์ ปักหมุดทรัพย์สินบนแผนที่">
+    <meta name="keywords" content="อสังหาริมทรัพย์, ซื้อขายบ้าน, ปักหมุดทรัพย์สิน, PropertyPin">
     <title>PropertyPin</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <!-- Font Awesome Icons -->
@@ -22,67 +26,106 @@
     </header>
 
     <!-- Filter Section -->
-    <div id="filters">
-        <label for="type-filter">
-            <i class="fas fa-filter"></i> กรองโดย:
-        </label>
-        <select id="type-filter">
-            <option value="all">ทั้งหมด</option>
-            <option value="condo"><i class="fas fa-building"></i> คอนโด</option>
-            <option value="house"><i class="fas fa-home"></i> บ้านเดี่ยว</option>
-            <option value="land"><i class="fas fa-tree"></i> ที่ดิน</option>
-        </select>
+    <div id="filters" class="container mt-3">
+        <div class="row">
+            <div class="col-auto">
+                <label for="type-filter" class="form-label">
+                    <i class="fas fa-filter"></i> กรองโดย:
+                </label>
+            </div>
+            <div class="col">
+                <select id="type-filter" class="form-select">
+                    <option value="all">ทั้งหมด</option>
+                    <option value="condo"><i class="fas fa-building"></i> คอนโด</option>
+                    <option value="house"><i class="fas fa-home"></i> บ้านเดี่ยว</option>
+                    <option value="land"><i class="fas fa-tree"></i> ที่ดิน</option>
+                </select>
+            </div>
+        </div>
     </div>
 
     <!-- Map Section -->
-    <div id="map"></div>
+    <div id="map" class="container-fluid"></div>
 
     <!-- Property Listing Form -->
-    <form id="property-form" style="display: none;">
-        <h2>ลงประกาศทรัพย์สิน</h2>
-        <label for="title">
-            <i class="fas fa-heading"></i> ชื่อทรัพย์สิน:
-        </label>
-        <input type="text" id="title" name="title" placeholder="ใส่ชื่อทรัพย์สิน">
+    <form id="property-form" class="container p-4 rounded shadow" style="display: none;">
+        <h2 class="text-center mb-4">ลงประกาศทรัพย์สิน</h2>
+        <div class="mb-3">
+            <label for="title" class="form-label">
+                <i class="fas fa-heading"></i> ชื่อทรัพย์สิน:
+            </label>
+            <input type="text" id="title" name="title" class="form-control" placeholder="ใส่ชื่อทรัพย์สิน">
+        </div>
 
-        <label for="type">
-            <i class="fas fa-tag"></i> ประเภท:
-        </label>
-        <select id="type" name="type">
-            <option value="condo"><i class="fas fa-building"></i> คอนโด</option>
-            <option value="house"><i class="fas fa-home"></i> บ้านเดี่ยว</option>
-            <option value="land"><i class="fas fa-tree"></i> ที่ดิน</option>
-        </select>
+        <div class="mb-3">
+            <label for="type" class="form-label">
+                <i class="fas fa-tag"></i> ประเภท:
+            </label>
+            <select id="type" name="type" class="form-select">
+                <option value="condo"><i class="fas fa-building"></i> คอนโด</option>
+                <option value="house"><i class="fas fa-home"></i> บ้านเดี่ยว</option>
+                <option value="land"><i class="fas fa-tree"></i> ที่ดิน</option>
+            </select>
+        </div>
 
-        <label for="price">
-            <i class="fas fa-dollar-sign"></i> ราคา:
-        </label>
-        <input type="number" id="price" name="price" placeholder="ใส่ราคา">
+        <div class="mb-3">
+            <label for="price" class="form-label">
+                <i class="fas fa-dollar-sign"></i> ราคา:
+            </label>
+            <input type="number" id="price" name="price" class="form-control" placeholder="ใส่ราคา">
+        </div>
 
-        <label for="lat">
-            <i class="fas fa-globe-asia"></i> Latitude:
-        </label>
-        <input type="number" step="any" id="lat" name="lat" placeholder="ใส่ละติจูด">
+        <div class="mb-3">
+            <label for="location-mode" class="form-label">
+                <i class="fas fa-map-marker-alt"></i> วิธีระบุตำแหน่ง:
+            </label>
+            <select id="location-mode" name="location-mode" class="form-select">
+                <option value="auto">ใช้ตำแหน่งปัจจุบัน (อัตโนมัติ)</option>
+                <option value="manual">ระบุด้วยตัวเอง</option>
+            </select>
+        </div>
 
-        <label for="lng">
-            <i class="fas fa-map-marker-alt"></i> Longitude:
-        </label>
-        <input type="number" step="any" id="lng" name="lng" placeholder="ใส่ลองจิจูด">
+        <div id="manual-location" style="display: none;">
+            <div class="mb-3">
+                <label for="lat" class="form-label">
+                    <i class="fas fa-globe-asia"></i> Latitude:
+                </label>
+                <input type="number" step="any" id="lat" name="lat" class="form-control" placeholder="ใส่ละติจูด">
+            </div>
+            <div class="mb-3">
+                <label for="lng" class="form-label">
+                    <i class="fas fa-map-marker-alt"></i> Longitude:
+                </label>
+                <input type="number" step="any" id="lng" name="lng" class="form-control" placeholder="ใส่ลองจิจูด">
+            </div>
+        </div>
 
-        <label for="image">
-            <i class="fas fa-image"></i> ภาพถ่าย:
-        </label>
-        <input type="file" id="image" name="image" accept="image/*">
+        <div class="mb-3">
+            <label for="image" class="form-label">
+                <i class="fas fa-image"></i> ภาพถ่าย:
+            </label>
+            <input type="file" id="image" name="image" class="form-control" accept="image/*">
+        </div>
 
-        <button type="submit">
-            <i class="fas fa-plus"></i> เพิ่มทรัพย์สิน
-        </button>
+        <div class="d-flex justify-content-between">
+            <button type="submit" class="btn btn-success">
+                <i class="fas fa-plus"></i> เพิ่มทรัพย์สิน
+            </button>
+            <button type="button" id="cancel-form" class="btn btn-secondary">
+                <i class="fas fa-times"></i> ยกเลิก
+            </button>
+        </div>
     </form>
 
     <!-- Floating Action Button -->
-    <button class="fab-button">
+    <button class="fab-button btn btn-success">
         <i class="fas fa-plus"></i>
     </button>
+
+    <!-- Feedback Button -->
+    <a href="https://forms.gle/your-google-form-link" target="_blank" class="btn btn-primary position-fixed feedback-button">
+        <i class="fas fa-comment"></i> Feedback
+    </a>
 
     <!-- Bottom Navigation Menu -->
     <nav class="bottom-menu">
@@ -106,6 +149,10 @@
 
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <!-- Compressor.js for image compression -->
+    <script src="https://cdn.jsdelivr.net/npm/compressorjs@1.2.1/dist/compressor.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JavaScript -->
     <script src="script.js"></script>
 </body>
