--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="PropertyPin - แพลตฟอร์มซื้อขายอสังหาริมทรัพย์ ปักหมุดทรัพย์สินบนแผนที่">
-    <meta name="keywords" content="อสังหาริมทรัพย์, ซื้อขายบ้าน, ปักหมุดทรัพย์สิน, PropertyPin">
-    <title>PropertyPin</title>
+    <meta name="description" content="ปักหมุดทรัพย์ - ค้นหาง่าย ซื้อขายไว แพลตฟอร์มซื้อขายอสังหาริมทรัพย์ ปักหมุดทรัพย์สินบนแผนที่">
+    <meta name="keywords" content="อสังหาริมทรัพย์, ซื้อขายบ้าน, ปักหมุดทรัพย์สิน, ปักหมุดทรัพย์, ค้นหาง่าย, ซื้อขายไว">
+    <title>ปักหมุดทรัพย์</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Leaflet CSS -->
@@ -18,6 +18,13 @@
 <body>
     <!-- Header -->
     <header class="header">
+        <div class="logo-section">
+            <img src="logo.png" alt="ปักหมุดทรัพย์ Logo" class="logo">
+            <div class="text-section">
+                <span class="project-name">ปักหมุดทรัพย์</span>
+                <span class="slogan">ค้นหาง่าย ซื้อขายไว</span>
+            </div>
+        </div>
         <div class="profile-section">
             <img src="profile-icon.png" alt="Profile" class="profile-icon">
             <span class="username">Real Estate Platform</span>
