--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ปักหมุดทรัพย์ - ค้นหาง่าย ซื้อขายไว แพลตฟอร์มซื้อขายอสังหาริมทรัพย์ ปักหมุดทรัพย์สินบนแผนที่">
-    <meta name="keywords" content="อสังหาริมทรัพย์, ซื้อขายบ้าน, ปักหมุดทรัพย์สิน, ปักหมุดทรัพย์, ค้นหาง่าย, ซื้อขายไว">
+    <meta name="keywords" content="อสังหาริมทรัพย์, ซื้อขายบ้าน, ปักหมุดทรัพย์สิน, ปักหมุดทรัพย์, ค้นหาง่าย, ซื้อขายไว, PropertyPin">
     <title>ปักหมุดทรัพย์</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -26,9 +26,7 @@
             </div>
         </div>
         <div class="profile-section">
-            <img src="profile-icon.png" alt="Profile" class="profile-icon">
-            <span class="username">Real Estate Platform</span>
-            <span class="rating">5.00</span>
+            <span class="username">PropertyPin</span>
         </div>
     </header>
 
