--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="profile-section">
-            <span class="username">PropertyPin</span>
+            <span class="username"><i class="fas fa-map-pin me-1"></i> PropertyPin</span>
         </div>
     </header>
 
