--- a/index.html
+++ b/index.html
@@ -80,6 +80,22 @@
             <input type="number" id="price" name="price" class="form-control" placeholder="ใส่ราคา">
         </div>
 
+        <!-- เพิ่มฟิลด์เบอร์ผู้ขาย -->
+        <div class="mb-3">
+            <label for="phone" class="form-label">
+                <i class="fas fa-phone"></i> เบอร์ผู้ขาย:
+            </label>
+            <input type="tel" id="phone" name="phone" class="form-control" placeholder="ใส่เบอร์โทรศัพท์ (เช่น 0123456789)">
+        </div>
+
+        <!-- เพิ่มตัวเลือกแสดงเบอร์ -->
+        <div class="mb-3 form-check">
+            <input type="checkbox" id="show-phone" name="show-phone" class="form-check-input" checked>
+            <label for="show-phone" class="form-check-label">
+                <i class="fas fa-eye"></i> แสดงเบอร์โทรในประกาศ
+            </label>
+        </div>
+
         <div class="mb-3">
             <label for="location-mode" class="form-label">
                 <i class="fas fa-map-marker-alt"></i> วิธีระบุตำแหน่ง:
